<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mensa-Guthaben</string>
    <string name="action_about">About Mensa-Guthaben</string>
    <string name="action_settings">Settings</string>
    <string name="place_on_card">Place on Mensa card</string>
    <string name="title_activity_about">About</string>
    <string name="copyright" translatable="false"><a href="http://jakobwenzel.github.io/MensaGuthaben">© 2017 Jakob Wenzel</a></string>
    <string name="farebot">This app contains code from <a href="https://github.com/codebutler/farebot">farebot</a> licensed under GPL</string>
    <string name="github">Find the Source Code on <a href="https://github.com/antidau/MensaGuthaben">Github</a>!</string>
    <string name="nfc_off">NFC is off</string>
    <string name="turn_nfc_on">Please turn on NFC</string>
    <string name="goto_settings">go to settings</string>
    <string name="last_withdrawal">Last withdrawal:</string>
    <string name="card_not_supported">Card not supported</string>
    <string name="communication_fail">Communication with Card failed</string>
    <string name="website">If you test the app on cards from a different university, I\'d love to hear about the results. Write me <a href="mailto:jakobwenzel92+app@gmail.com">a Mail</a> or <a href="https://github.com/jakobwenzel/MensaGuthaben/issues">via Github</a>!</string>
    <string name="version">Version</string>
    <string name="fullscreen">Fullscreen</string>
    <string name="debuggingButton">Send Log messages via Email</string>
    <string name="debuggingExplanation">If the app does not work for some reason, press this button to send me the log
        messages:
    </string>

</resources>
