<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AboutActivity" >

	<TextView
		android:id="@+id/tvVersion"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_centerInParent="false"/>

    <TextView
        android:id="@+id/tvCopyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="false"
		android:layout_below="@+id/tvVersion"
        android:text="@string/copyright" />


    <TextView
            android:id="@+id/tvWebsite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvCopyright"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="38dp"
            android:text="@string/website"
			android:gravity="center_horizontal"/>

    <TextView
        android:id="@+id/tvFarebot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvWebsite"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:text="@string/farebot"
		android:gravity="center_horizontal"/>

    <TextView
        android:id="@+id/tvSource"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvFarebot"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:text="@string/github"
		android:gravity="center_horizontal"/>

	<TextView
			android:id="@+id/tvDebugging"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/tvSource"
			android:layout_centerHorizontal="true"
			android:layout_marginTop="38dp"
			android:text="@string/debuggingExplanation"
			android:gravity="center_horizontal"/>

	<Button
			android:id="@+id/bDebug"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/tvDebugging"
			android:layout_centerHorizontal="true"
			android:layout_marginTop="38dp"
			android:text="@string/debuggingButton"/>

</RelativeLayout>